WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301336
[GTK][WPE] Fix clang build after
301948@main
https://bugs.webkit.org/show_bug.cgi?id=301336
Summary
[GTK][WPE] Fix clang build after 301948@main
Nikolas Zimmermann
Reported
2025-10-23 03:23:18 PDT
Add WTF_IGNORE_WARNINGS_IN_THIRD_PARTY_CODE_BEGIN/.._END pair around Skia includes.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2025-10-23 03:24:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52871
EWS
Comment 2
2025-10-23 04:00:03 PDT
Committed
302018@main
(5446a6252f3c): <
https://commits.webkit.org/302018@main
> Reviewed commits have been landed. Closing PR #52871 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug