[GTK][WPE] Fix clang build after 301948@main https://bugs.webkit.org/show_bug.cgi?id=301336

Reviewed by Adrian Perez de Castro.

Wrap Skia includes in WTF_IGNORE_WARNINGS_IN_THIRD_PARTY_CODE_BEGIN/..._END.

* Source/WebKit/UIProcess/ViewSnapshotStore.h:

Canonical link: https://commits.webkit.org/302018@main