Source/WebKit/UIProcess/ViewSnapshotStore.h
@@ -47,7 +47,9 @@
 #endif
 
 #if PLATFORM(WPE) && USE(SKIA)
+WTF_IGNORE_WARNINGS_IN_THIRD_PARTY_CODE_BEGIN
 #include <skia/core/SkImage.h>
+WTF_IGNORE_WARNINGS_IN_THIRD_PARTY_CODE_END
 #include <wtf/Expected.h>
 #endif
 
